--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -101,3 +101,33 @@ form.create-note button {
   cursor: pointer;
   outline: none;
 }
+
+.form-div {
+  margin-left: 340px;
+  padding-left: 50px;
+  padding-top: 50px;
+  position: absolute;
+  width: 50%;
+  border-radius: 8px;
+  height: 50%;
+  position: r;
+  z-index: 5;
+  background-color: #f5ba13;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
+}
+.title-input {
+  margin-bottom: 15px;
+  width: 40%;
+  border: none;
+  padding: 4px;
+  outline: none;
+  font-size: 1.2em;
+  font-family: inherit;
+  resize: none;
+  border-radius: 8px;
+}
+.form-class-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
